Fix fluid tank WAILA